--- a/stylesheets/voila.css
+++ b/stylesheets/voila.css
@@ -8,14 +8,16 @@ body {
 	font-family: Verdana, Georgia, Helvetica,/* Desktop */ "MozTT", "Droid Sans", "Helvetica Neue",/* Mobile */ Sans-serif;/* Fallback*/
 	line-height: 175%;
 	text-align: center;
+	text-shadow: 0 2px 0 #333333;
 }
 hr {
-	margin-top: 11px;
+	margin-top: 7px;
 }
 
 .caption {
 	font-size: 24px;
-	padding-top: 5px; 
+	padding-top: 5px;
+	text-shadow: 0 2px 0 #333333;
 }
 
 .submit {
@@ -31,7 +33,7 @@ hr {
 	margin: 0;
 	padding: 10px;
 	text-align: center;
-	text-shadow: 0 1px 0 #333333;
+	text-shadow: 0 2px 0 #333333;
 	font-family: Verdana, Georgia, Helvetica,				/* Desktop */
 				 "MozTT", "Droid Sans", "Helvetica Neue",	/* Mobile */
 				 Sans-serif;								/* Fallback*/
@@ -61,4 +63,40 @@ hr {
 }
 #wrapper{
 	text-align: center;
+}
+
+#htmlLabel{
+	border-radius: 10px 10px 0 0;
+	color: #ffffff;
+	display: inline;
+	font-weight: bold;
+	text-align: center;
+	text-shadow: 0 2px 0 #333333;
+	font-family: Verdana, Georgia, Helvetica,				/* Desktop */
+				 "MozTT", "Droid Sans", "Helvetica Neue",	/* Mobile */
+				 Sans-serif;								/* Fallback*/
+}
+
+#cssLabel{
+	border-radius: 10px 10px 0 0;
+	color: #ffffff;
+	display: inline;
+	font-weight: bold;
+	text-align: center;
+	text-shadow: 0 2px 0 #333333;
+	font-family: Verdana, Georgia, Helvetica,				/* Desktop */
+				 "MozTT", "Droid Sans", "Helvetica Neue",	/* Mobile */
+				 Sans-serif;								/* Fallback*/
+}
+
+#jsLabel{
+	border-radius: 10px 10px 0 0;
+	color: #ffffff;
+	display: inline;
+	font-weight: bold;
+	text-align: center;
+	text-shadow: 0 2px 0 #333333;
+	font-family: Verdana, Georgia, Helvetica,				/* Desktop */
+				 "MozTT", "Droid Sans", "Helvetica Neue",	/* Mobile */
+				 Sans-serif;								/* Fallback*/
 }
